Avoid doing kill(-1) in QProcess destructor

It can happen under unspecified conditions, see relevant ticket.

Task-number: QTBUG-86285
Pick-to: 5.15
Change-Id: I1f77bf0061a0faaa60283bb93fc3d82031247d54
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>